--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,8 @@ jobs:
         run: poetry run coverage run --branch -m pytest
       - name: Coverage report
         run: poetry run coverage xml
+      - name: Run pylint
+        run: poetry run pylint src
       - name: Coveragge report to Codecov
         uses: codecov/codecov-action@v3
         env:
