--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Coverage report
         run: poetry run coverage xml
       - name: Run pylint
-        run: poetry run pylint src
+        run: poetry run pylint src/varasto.py
       - name: Coveragge report to Codecov
         uses: codecov/codecov-action@v3
         env:
