--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,10 @@ jobs:
         run: poetry run coverage run --branch -m pytest
       - name: Coverage report
         run: poetry run coverage xml
+      - name: Install pylint
+        run: poetry add pylint
       - name: Run pylint
-        run: poetry run pylint src/varasto.py
+        run: poetry run pylint src
       - name: Coveragge report to Codecov
         uses: codecov/codecov-action@v3
         env:
