--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Coverage report
         run: poetry run coverage xml
       - name: Install pylint
-        run: poetry add pylint
+        run: pip install pylint
       - name: Run pylint
         run: poetry run pylint src
       - name: Coveragge report to Codecov
