--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,8 @@ jobs:
         run: poetry run coverage xml
       - name: Coveragge report to Codecov
         uses: codecov/codecov-action@v3
+      - name: Install pylint
+        run: poetry run poetry add pylint
       - name: Run pylint
         run: poetry run pylint src
         env:
