--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,13 +22,11 @@ jobs:
         run: poetry install
       - name: Run tests
         run: poetry run coverage run --branch -m pytest
+      - name: Run lint
+        run: poetry run pylint src
       - name: Coverage report
         run: poetry run coverage xml
       - name: Coveragge report to Codecov
         uses: codecov/codecov-action@v3
-      - name: Install pylint
-        run: pip install pylint
-      - name: Pylint
-        run: poetry run pylint src
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
