--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,13 +22,9 @@ jobs:
         run: poetry install
       - name: Run tests
         run: poetry run coverage run --branch -m pytest
-      - name: Install pylint
-        run: poetry run poetry add pylint
-      - name: Run pylint
+      - name: Run lint
         run: poetry run pylint src
       - name: Coverage report
         run: poetry run coverage xml
-      - name: Coveragge report to Codecov
-        uses: codecov/codecov-action@v3
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      - name: Coverage report to Codecov
+        run: bash <(curl -s https://codecov.io/bash)
